@@ -39,37 +39,18 @@ def make_list():
 				if favourite_team == team['id']:
 					items.append({'name': team['name'], 'channel': team['channel']})
 
-
 		# Add the other feeds listed in the config file
 		for channel in config.CHANNELS:
 			items.append({'name': channel['name'], 'channel': channel['channel']})
 
-		items.append({'name': 'Settings', 'channel': 'settings'})
+		categories = config.CATEGORIES
 
-		# fill media list
-		ok = fill_media_list(items)
-	except:
-		# oops print error message
-		print "ERROR: %s (%d) - %s" % (sys.exc_info()[2].tb_frame.f_code.co_name, sys.exc_info()[2].tb_lineno, sys.exc_info()[1])
-		ok = False
-
-	# send notification we're finished, successfully or unsuccessfully
-	xbmcplugin.endOfDirectory(handle=int(sys.argv[1]), succeeded=ok)
-
-
-def fill_media_list(items):
-
-	try:
-		ok = True
 		# enumerate through the list of categories and add the item to the media list
 		for i in items:
 			url = "%s?channel=%s" % (sys.argv[0], i['channel'])
-			#thumbnail = get_thumbnail(c.channel)
-			icon = "defaultfolder.png"
-			listitem = xbmcgui.ListItem(i['name'], iconImage=icon)
-			#listitem.setInfo('video',{'episode':s.get_num_episodes()})
-			# add the item to the media list
+			listitem = xbmcgui.ListItem(i['name'])
 
+			# add the item to the media list
 			ok = xbmcplugin.addDirectoryItem(
 						handle=int(sys.argv[1]), 
 						url=url, 
@@ -78,18 +59,24 @@ def fill_media_list(items):
 						totalItems=len(config.CHANNELS) + 1
 					)
 
-			# if user cancels, call raise to exit loop
-			if (not ok): 
-				raise
+		for category in categories:
+			url = "%s?category=%s" % (sys.argv[0], category)
+			listitem = xbmcgui.ListItem(category)
 
-		#xbmcplugin.setContent(handle=int(sys.argv[1]), content='tvshows')
+			# add the item to the media list
+			ok = xbmcplugin.addDirectoryItem(
+						handle=int(sys.argv[1]), 
+						url=url, 
+						listitem=listitem, 
+						isFolder=True, 
+						totalItems=len(config.CATEGORIES)
+					)
+
+		xbmcplugin.endOfDirectory(handle=int(sys.argv[1]), succeeded=ok)
 	except:
 		# user cancelled dialog or an error occurred
 		d = xbmcgui.Dialog()
-		d.ok('AFL Video Error', 'AFL Video encountered an error:', '  %s (%d) - %s' % (sys.exc_info()[ 2 ].tb_frame.f_code.co_name, sys.exc_info()[ 2 ].tb_lineno, sys.exc_info()[ 1 ]) )
-
-		# user cancelled dialog or an error occurred
-		print "ERROR: %s (%d) - %s" % (sys.exc_info()[ 2 ].tb_frame.f_code.co_name, sys.exc_info()[ 2 ].tb_lineno, sys.exc_info()[ 1 ],)
-		ok = False
-
+		msg = utils.dialog_error("Unable build video category list")
+		d.ok(*msg)
+		utils.log_error();
 	return ok
