@@ -27,35 +27,13 @@ except ImportError:
 	pass # for PC debugging
 
 def make_list():
-	#params = utils.get_url(url)	
-
 	try:
 		# Show a dialog
 		pDialog = xbmcgui.DialogProgress()
 		pDialog.create('AFL Video', 'Getting Team List')
 		pDialog.update(50)
 
-		teams = config.TEAMS
-
-		# fill media list
-		ok = fill_team_list(teams)
-	except:
-		# oops print error message
-		print "ERROR: %s (%d) - %s" % (sys.exc_info()[2].tb_frame.f_code.co_name, sys.exc_info()[2].tb_lineno, sys.exc_info()[1])
-		ok = False
-
-	# send notification we're finished, successfully or unsuccessfully
-	xbmcplugin.endOfDirectory(handle=int(sys.argv[1]), succeeded=ok)
-
-
-def fill_team_list(teams):
-
-	try:	
-		ok = True
-
-		for t in teams:
-			# Thumbnail
-
+		for t in config.TEAMS:
 			# Add our resources/lib to the python path
 			try:
 				current_dir = os.path.dirname(os.path.abspath(__file__))
@@ -63,7 +41,6 @@ def fill_team_list(teams):
 				current_dir = os.getcwd()
 
 			thumbnail = os.path.join(current_dir, "..", "..", "resources", "img", t['thumb'])
-			utils.log("Thumbnail: %s" % thumbnail)
 			listitem = xbmcgui.ListItem(label=t['name'], iconImage=thumbnail, thumbnailImage=thumbnail)
 			url = "%s?channel=%s" % (sys.argv[0], t['channel'])
 
@@ -73,14 +50,16 @@ def fill_team_list(teams):
 						url = url,
 						listitem = listitem,
 						isFolder = True,
-						totalItems = len(teams)
+						totalItems = len(config.TEAMS)
 					)
 					
 
+		xbmcplugin.endOfDirectory(handle=int(sys.argv[1]), succeeded=ok)
 		xbmcplugin.setContent(handle=int(sys.argv[1]), content='episodes')
 	except:
 		# user cancelled dialog or an error occurred
-		print "ERROR: %s (%d) - %s" % ( sys.exc_info()[ 2 ].tb_frame.f_code.co_name, sys.exc_info()[ 2 ].tb_lineno, sys.exc_info()[ 1 ], )
-		ok = False
+		d = xbmcgui.Dialog()
+		msg = utils.dialog_error("Unable to fetch video list")
+		d.ok(*msg)
+		utils.log_error();
 
-	return ok
