@@ -1,3 +1,7 @@
+[B]Version 0.8[/B]
+- Switched for new 2013 video feeds
+- Fixes for club videos
+
 [B]Version 0.7[/B]
 - Update for 2013 season
 - Note: match replays now geoblocked :(
